--- a/style.css
+++ b/style.css
@@ -1,20 +1,19 @@
-body{
+body {
     margin: 0;
     overflow-x: hidden;
     font-family: 'Playfair Display', serif;
 }
 
-#element{
+#element {
     font-size: 1.6rem;
 }
 
-.navigation a{
+.navigation a {
     font-size: 1.2rem;
     font-family: var(--bs-body-font-family);
 }
 
-
-.main-img{
+.main-img {
     width: 100%;
     height: 100vh;
     background-image: url(images/green.jpg);
@@ -23,7 +22,7 @@ body{
     position: relative;
 }
 
-.main-img h1{
+.main-img h1 {
     text-align: center;
     color: #ccc;
 }
@@ -32,50 +31,97 @@ body{
     margin-left: auto;
 }
 
-.navbar{
+.navbar {
     background-color: black;
     padding-left: 20px;
     padding-right: 20px;
 }
 
-.mini-about{
+.mini-about {
     margin: 100px 100px;
     color: black;
 }
 
-.mini-about h1{
+.mini-about h1 {
     display: table-caption;
 }
 
-.footer{
+.footer {
     height: 75px;
     background-color: black;
     padding: 25px;
 }
 
-.footer-link{
+.footer-link {
     padding-left: 20px;
     text-decoration: none;
     color: #ccc;
 }
 
-.fab{
+.fab {
     text-decoration: none;
     color: #ccc;
     padding: 5px;
+}
+
+
+/* About Page */
+
+.facts {
+    height: 75vh;
+    background-color: black;
+}
+
+.carousel-inner {
+    padding: 150px;
+}
+
+.carousel-item {
+    color: #ccc;
+    height: 7.5rem;
+}
+
+.about-us {
+    height: 50vh;
+    width: 80%;
+    margin: 20px auto 20px;
+    color: black;
+    padding: 50px 0 0;
+}
+
+.after-about {
+    height: 75vh;
+    background-image: url(images/fire.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+
+.white-hr {
+    background-color: #ccc;
+    margin: 0 0 1px;
 }
 
 @media (max-width:700px) {
     .mini-about {
         margin: 100px 50px;
     }
-
-    .founder{
+    .founder {
         margin-top: 55px;
     }
-
-    .footer{
+    .footer {
         padding: 25px 15px;
-}
-    
+    }
+    .about-us {
+        margin: 20px auto 120px;
+    }
+    .carousel-inner {
+        padding: 150px 40px
+    }
+    .carousel-control-prev {
+        margin: 400px 0 0;
+    }
+    .carousel-control-next {
+        margin: 400px 0 0;
+    }
 }
