--- a/style.css
+++ b/style.css
@@ -113,7 +113,12 @@ body {
         padding: 25px 15px;
     }
     .about-us {
-        margin: 20px auto 120px;
+        margin: 20px auto 60px;
+        height: auto;
+    }
+    .facts {
+        height: auto;
+        padding-bottom: 90px;
     }
     .carousel-inner {
         padding: 150px 40px
