--- a/style.css
+++ b/style.css
@@ -53,9 +53,14 @@ body {
 }
 
 .footer-link {
-    padding-left: 20px;
+    padding: 0 10px;
     text-decoration: none;
     color: #ccc;
+}
+
+.footer-link:hover {
+    cursor: pointer;
+    color: grey;
 }
 
 .fab {
@@ -66,6 +71,14 @@ body {
 
 
 /* About Page */
+
+.about-img {
+    height: 100vh;
+    background-image: url(images/fire.jpg);
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
 
 .facts {
     height: 75vh;
@@ -102,6 +115,19 @@ body {
     margin: 0 0 1px;
 }
 
+
+/* Samples Page */
+
+.samples {
+    width: 80%;
+    margin: auto;
+    padding: 50px 0 50px;
+}
+
+.col-md-4 {
+    text-align: center;
+}
+
 @media (max-width:700px) {
     .mini-about {
         margin: 100px 50px;
@@ -111,6 +137,7 @@ body {
     }
     .footer {
         padding: 25px 15px;
+        text-align: center;
     }
     .about-us {
         margin: 20px auto 60px;
@@ -128,5 +155,14 @@ body {
     }
     .carousel-control-next {
         margin: 400px 0 0;
+    }
+    .samples {
+        padding-bottom: 10px;
+    }
+    .col-md-4 {
+        padding-bottom: 10%;
+    }
+    .about-img {
+        height: 75vh;
     }
 }
